upload instagram feed and style

--- a/staff/ramon-palao/templates/instagram/feed.html
+++ b/staff/ramon-palao/templates/instagram/feed.html
@@ -22,6 +22,10 @@
             <li class="nav-upper__stories border"></li>
         </ul>
     </nav>
+    <aside class="nav-upper__aside border">
+        <h5 class="nav-upper__suggestions">SUGGESTIONS</h5>
+        <p class="nav-upper__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum <br/><br/>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+    </aside>
     <main>
         <section class="upperbar border">
             <div class="upperbar__user">
@@ -35,49 +39,47 @@
         <figure class="picture">
             <img class="picture__user" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="picture">
         </figure>
-        <section></section>
-            <figcaption class="interaction border">
-                <div class="interaction__options">
-                    <div class="interaction__like interaction__like--color border"></div>
-                    <div class="interaction__comment border"></div>
-                    <div class="interaction__message border"></div>
-                </div>
-                <div class="interaction__options-two">
-                    <div class="interaction__share border"></div>
-                </div>
-            </figcaption>
-            <article class="comment border">
-                <p class="comment__line">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum <br/><br/>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-            </article><br/><br/>
-        <section></section>
+        <figcaption class="interaction border">
+            <div class="interaction__options">
+                <div class="interaction__like interaction__like--color border"></div>
+                <div class="interaction__comment border"></div>
+                <div class="interaction__message border"></div>
+            </div>
+            <div class="interaction__options-two">
+                <div class="interaction__share border"></div>
+            </div>
+        </figcaption>
+        <article class="comment border">
+            <p class="comment__line">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum <br/><br/>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p><br/>
+            <input type="text" class="comment__add" placeholder="Add your comment">
+        </article><br/><br/>
         <section class="upperbar border">
-                <div class="upperbar__user">
-                    <div class="upperbar__userphoto border"></div>
-                    <div class="upperbar__username border"></div>
-                </div>
-                <div class="upperbar__options">
-                    <div class="upperbar__options-choice border"></div>
-                </div>
-            </section>
-            <figure class="picture">
-                <img class="picture__user" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="picture">
-            </figure>
-            <section></section>
-                <figcaption class="interaction border">
-                    <div class="interaction__options">
-                        <div class="interaction__like interaction__like--color border"></div>
-                        <div class="interaction__comment border"></div>
-                        <div class="interaction__message border"></div>
-                    </div>
-                    <div class="interaction__options-two">
-                        <div class="interaction__share border"></div>
-                    </div>
-                </figcaption>
-                <article class="comment border">
-                        <p class="comment__line">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum <br/><br/>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    </article>
-            <section></section>
-    </main>
+            <div class="upperbar__user">
+                <div class="upperbar__userphoto border"></div>
+                <div class="upperbar__username border"></div>
+            </div>
+            <div class="upperbar__options">
+                <div class="upperbar__options-choice border"></div>
+            </div>
+        </section>
+        <figure class="picture">
+            <img class="picture__user" src="https://fakeimg.pl/450x200/ff0000%2C128/000%2C255/" alt="picture">
+        </figure>
+        <figcaption class="interaction border">
+            <div class="interaction__options">
+                <div class="interaction__like interaction__like--color border"></div>
+                <div class="interaction__comment border"></div>
+                <div class="interaction__message border"></div>
+            </div>
+            <div class="interaction__options-two">
+                <div class="interaction__share border"></div>
+            </div>
+        </figcaption>
+        <article class="comment border">
+                <p class="comment__line">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum <br/><br/>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p><br/>
+                <input type="text" class="comment__add" placeholder="Add your comment">
+            </article>
+    </main>    
     <footer>
         <nav class="nav-bottom border">
             <div class="nav-bottom__home border"></div></div>
