--- a/staff/ramon-palao/templates/instagram/style.css
+++ b/staff/ramon-palao/templates/instagram/style.css
@@ -112,12 +112,20 @@ nav{
 .comment{
     background-color: white;
 }
+.comment__add{
+    width: 100%;
+    height: 6vh;
+}
+.nav-upper__aside{
+    display: none;
+}
 
-@media only screen and (min-width: 1024px){
+@media only screen and (min-width: 768px){
 
     main{
-        width: 40%;
-        margin: 15vh 70vh 10vh 40vh;
+        width: 70%;
+        margin-top: 5vh;
+        align-self: center;
     }
     .picture{
         height: 60vh;
@@ -126,21 +134,19 @@ nav{
         height: 60vh;
     }
     .nav-upper{
-        padding: 2vh 2vh;
-        width: 20%;
-        height: 40vh;
-        background-color: white;
+        padding: 1vh;
+        width: 70%;
+        background-color: rgba(var(--b3f,250,250,250),1);
         display: flex;
-        align-self: flex-end;
-        position: fixed;
-        top: 30vh;
-        right: 40vh;
+        align-self: center;
+        margin-top: 5vh;
     }
     .nav-upper__carrusel{
         list-style: none;
         display: flex;
         justify-content: space-between;
-        flex-direction: column;
+        flex-direction: row;
+        width: 100%;
         padding: 0;
     }
     .nav-upper__stories{
@@ -151,5 +157,47 @@ nav{
     }
     .nav-bottom{
         display: none;
+    }
+    .nav-upper__aside{
+        display: none;
+    }
+}
+
+@media only screen and (min-width: 1024px){
+
+    main{
+        width: 40%;
+        margin: 15vh 70vh 10vh 40vh;
+    }
+    .nav-upper{
+        padding: 2vh;
+        width: 20%;
+        height: 35vh;
+        background-color: white;
+        display: flex;
+        align-self: flex-end;
+        position: fixed;
+        top: 25vh;
+        right: 40vh;
+        left: 135vh;
+    }
+    .nav-upper__carrusel{
+        list-style: none;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        padding: 0;
+    }
+    .nav-upper__aside{
+        padding: 2vh 2vh;
+        width: 20%;
+        height: 25vh;
+        background-color: white;
+        align-self: flex-end;
+        position: fixed;
+        overflow: auto;
+        top: 67vh;
+        left: 135vh;
+        display: inline-block;
     }
 }
