upload changes in instagram files

--- a/staff/ramon-palao/templates/instagram/feed.html
+++ b/staff/ramon-palao/templates/instagram/feed.html
@@ -29,8 +29,8 @@
     <main>
         <section class="upperbar border">
             <div class="upperbar__user">
-                <div class="upperbar__userphoto border"></div>
-                <div class="upperbar__username border"></div>
+                <a class="upperbar__userphoto border" href="profile.html"></a>
+                <a class="upperbar__username border" href="profile.html"></a>
             </div>
             <div class="upperbar__options">
                 <div class="upperbar__options-choice border"></div>
@@ -55,8 +55,8 @@
         </article><br/><br/>
         <section class="upperbar border">
             <div class="upperbar__user">
-                <div class="upperbar__userphoto border"></div>
-                <div class="upperbar__username border"></div>
+                <a class="upperbar__userphoto border" href="profile.html"></a>
+                <a class="upperbar__username border" href="profile.html"></a>
             </div>
             <div class="upperbar__options">
                 <div class="upperbar__options-choice border"></div>
@@ -82,11 +82,11 @@
     </main>    
     <footer>
         <nav class="nav-bottom border">
-            <div class="nav-bottom__home border"></div></div>
-            <div class="nav-bottom__search border"></div>
-            <div class="nav-bottom__gallery border"></div>
-            <div class="nav-bottom__favs border"></div>
-            <div class="nav-bottom__profile border"></div>
+            <a class="nav-bottom__home border" href="profile.html"></a>
+            <a class="nav-bottom__search border" href="profile.html"></a>
+            <a class="nav-bottom__gallery border" href="profile.html"></a>
+            <a class="nav-bottom__favs border" href="profile.html"></a>
+            <a class="nav-bottom__profile border" href="profile.html"></a>
         </nav>
     </footer>
 </body>
