--- a/staff/lisandro-bertoli/templates/nike/components/header.sass
+++ b/staff/lisandro-bertoli/templates/nike/components/header.sass
@@ -1,7 +1,7 @@
 .main-header
     display: flex
     justify-content: space-between
-    width: 100vw
+    width: 100%
     height: 4.5rem
     padding: 1rem
     border-bottom: 0.3px solid lightgrey
