--- a/staff/lisandro-bertoli/templates/nike/components/results.sass
+++ b/staff/lisandro-bertoli/templates/nike/components/results.sass
@@ -3,7 +3,7 @@
 .main-results
     display: flex
     flex-direction: column
-    width: 100vw
+    width: 100%
 
     &__header
         display: flex
@@ -13,7 +13,7 @@
         margin-top: 1.6rem
         margin-bottom: 2rem
 
-        width: 100vw
+        width: 100%
 
     &__title > h1
         font-size: 2rem
@@ -21,6 +21,9 @@
     &__filter-toggle  .fas
         font-size: 1.5rem
         margin-top: 1.5rem
+
+    &__filters-menu
+        width: 100%
 
     &__products
         display: flex
