--- a/staff/lisandro-bertoli/templates/nike/results.html
+++ b/staff/lisandro-bertoli/templates/nike/results.html
@@ -39,17 +39,24 @@
 			<section
 				class="main-results__filters-menu main-results__filters-menu--hidden"
 			>
-				<nav class="filters filters__regular">
-					<h4>Tipo de Producto</h4>
-					<ul>
+				<nav class="filter filter__regular">
+					<header class="filter__header">
+						<h4>Tipo de Producto</h4>
+						<i class="fas fa-chevron-up"></i>
+					</header>
+					<ul class="filter__options">
 						<li>Opcion1</li>
 						<li>Opcion2</li>
 						<li>Opcion3</li>
 						<li>Opcion4</li>
 					</ul>
 				</nav>
-				<nav clas="filters filters__color">
-					<ul>
+				<nav class="filter filter__color">
+					<header class="filter__header">
+						<h4>Color</h4>
+						<i class="fas fa-chevron-up"></i>
+					</header>
+					<ul class="filter__options">
 						<li></li>
 						<li></li>
 						<li></li>
@@ -58,17 +65,24 @@
 						<li></li>
 					</ul>
 				</nav>
-				<nav class="filters filters__regular">
-					<h4>Precio</h4>
-					<ul>
+				<nav class="filter filter__regular">
+					<header class="filter__header">
+						<h4>Precio</h4>
+						<i class="fas fa-chevron-up"></i>
+					</header>
+					<ul class="filter__options">
 						<li>Opcion1</li>
 						<li>Opcion2</li>
 						<li>Opcion3</li>
 						<li>Opcion4</li>
 					</ul>
 				</nav>
-				<nav class="filters filters__regular">
-					<h4>Ventajas</h4>
+				<nav class="filter filter__regular">
+					<header class="filter__header">
+						<h4>Ventajas</h4>
+						<i class="fas fa-chevron-up"></i>
+					</header>
+					<ul class="filter__options">
 					<ul>
 						<li>Opcion1</li>
 						<li>Opcion2</li>
@@ -80,7 +94,40 @@
 			<section class="main-results__products">
 				<article class="product">
 					<figure class="product__img-container">
-						<img src="https://dummyimage.com/185x185/cccccc/fff" alt="" />
+						<img src="https://dummyimage.com/349x349/d4d4d4/fff" alt="" />
+						<figcaption>
+							<h5 class="product__title">Nike Air Max 90</h5>
+							<p class="product__info">Zapatillas - mujer</p>
+							<p class="product__info">3 colores</p>
+							<p class="product__price">140 €</p>
+						</figcaption>
+					</figure>
+				</article>
+				<article class="product">
+					<figure class="product__img-container">
+						<img src="https://dummyimage.com/349x349/d4d4d4/fff" alt="" />
+						<figcaption>
+							<h5 class="product__title">Nike Air Max 90</h5>
+							<p class="product__info">Zapatillas - mujer</p>
+							<p class="product__info">3 colores</p>
+							<p class="product__price">140 €</p>
+						</figcaption>
+					</figure>
+				</article>
+				<article class="product">
+					<figure class="product__img-container">
+						<img src="https://dummyimage.com/349x349/d4d4d4/fff" alt="" />
+						<figcaption>
+							<h5 class="product__title">Nike Air Max 90</h5>
+							<p class="product__info">Zapatillas - mujer</p>
+							<p class="product__info">3 colores</p>
+							<p class="product__price">140 €</p>
+						</figcaption>
+					</figure>
+				</article>
+				<article class="product">
+					<figure class="product__img-container">
+						<img src="https://dummyimage.com/349x349/d4d4d4/fff" alt="" />
 						<figcaption>
 							<h5 class="product__title">Nike Air Max 90</h5>
 							<p class="product__info">Zapatillas - mujer</p>
@@ -113,7 +160,7 @@
 				</article>
 				<article class="product">
 					<figure class="product__img-container">
-						<img src="https://dummyimage.com/185x185/cccccc/fff" alt="" />
+						<img src="https://dummyimage.com/349x349/d4d4d4/fff" alt="" />
 						<figcaption>
 							<h5 class="product__title">Nike Air Max 90</h5>
 							<p class="product__info">Zapatillas - mujer</p>
@@ -124,7 +171,7 @@
 				</article>
 				<article class="product">
 					<figure class="product__img-container">
-						<img src="https://dummyimage.com/185x185/cccccc/fff" alt="" />
+						<img src="https://dummyimage.com/349x349/d4d4d4/fff" alt="" />
 						<figcaption>
 							<h5 class="product__title">Nike Air Max 90</h5>
 							<p class="product__info">Zapatillas - mujer</p>
@@ -135,40 +182,7 @@
 				</article>
 				<article class="product">
 					<figure class="product__img-container">
-						<img src="https://dummyimage.com/185x185/cccccc/fff" alt="" />
-						<figcaption>
-							<h5 class="product__title">Nike Air Max 90</h5>
-							<p class="product__info">Zapatillas - mujer</p>
-							<p class="product__info">3 colores</p>
-							<p class="product__price">140 €</p>
-						</figcaption>
-					</figure>
-				</article>
-				<article class="product">
-					<figure class="product__img-container">
-						<img src="https://dummyimage.com/185x185/cccccc/fff" alt="" />
-						<figcaption>
-							<h5 class="product__title">Nike Air Max 90</h5>
-							<p class="product__info">Zapatillas - mujer</p>
-							<p class="product__info">3 colores</p>
-							<p class="product__price">140 €</p>
-						</figcaption>
-					</figure>
-				</article>
-				<article class="product">
-					<figure class="product__img-container">
-						<img src="https://dummyimage.com/185x185/cccccc/fff" alt="" />
-						<figcaption>
-							<h5 class="product__title">Nike Air Max 90</h5>
-							<p class="product__info">Zapatillas - mujer</p>
-							<p class="product__info">3 colores</p>
-							<p class="product__price">140 €</p>
-						</figcaption>
-					</figure>
-				</article>
-				<article class="product">
-					<figure class="product__img-container">
-						<img src="https://dummyimage.com/185x185/cccccc/fff" alt="" />
+						<img src="https://dummyimage.com/349x349/d4d4d4/fff" alt="" />
 						<figcaption>
 							<h5 class="product__title">Nike Air Max 90</h5>
 							<p class="product__info">Zapatillas - mujer</p>
