--- a/staff/lisandro-bertoli/templates/nike/style.css
+++ b/staff/lisandro-bertoli/templates/nike/style.css
@@ -2,13 +2,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-size: 10px;
   list-style: none;
 }
 
 html, body {
   width: 100vw;
   height: 100vh;
+  font-size: 10px;
 }
 
 button,
@@ -36,7 +36,7 @@ select,
 .main-header {
   display: flex;
   justify-content: space-between;
-  width: 100vw;
+  width: 100%;
   height: 4.5rem;
   padding: 1rem;
   border-bottom: 0.3px solid lightgrey;
@@ -84,7 +84,7 @@ select,
 .main-results {
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
 }
 .main-results__header {
   display: flex;
@@ -92,7 +92,7 @@ select,
   padding: 1rem;
   margin-top: 1.6rem;
   margin-bottom: 2rem;
-  width: 100vw;
+  width: 100%;
 }
 .main-results__title > h1 {
   font-size: 2rem;
@@ -100,6 +100,9 @@ select,
 .main-results__filter-toggle .fas {
   font-size: 1.5rem;
   margin-top: 1.5rem;
+}
+.main-results__filters-menu {
+  width: 100%;
 }
 .main-results__products {
   display: flex;
@@ -160,20 +163,51 @@ select,
 @media only screen and (min-width: 1024px) {
   .main-results {
     display: grid;
-    grid-template-columns: repeat(5, auto);
+    grid-template-columns: repeat(4, auto);
+    justify-content: space-around;
   }
   .main-results__header {
-    grid-column: 1/span 5;
+    grid-column: 1/span 4;
+    padding: 0.6rem 4.8rem 0.1rem 4.8rem;
   }
-  .main-results__filter {
+  .main-results__filters-menu {
     grid-column: 1/span 1;
+    width: 20rem;
+    padding: 0 0 0 4.8rem;
+  }
+  .main-results__filters-menu .filter {
+    padding: 0 0.5rem 0;
+    border-bottom: 0.08rem solid lightgrey;
+  }
+  .main-results__filters-menu .filter__header {
+    padding: 1.2rem 0;
+    display: flex;
+    justify-content: space-between;
+  }
+  .main-results__filters-menu .filter__options {
+    padding-bottom: 2rem;
+    line-height: 1.5rem;
+  }
+  .main-results__filters-menu .filter__color > .filter__options {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  .main-results__filters-menu .filter__color > .filter__options > li {
+    height: 2.5rem;
+    width: 2.5rem;
+    background-color: red;
+    border-radius: 1.25rem;
+    margin: 1.5rem;
   }
   .main-results__products {
-    grid-column: 2/span 4;
+    grid-column: 2/span 3;
+    justify-content: space-around;
+    padding: 0 4.8rem 0 4rem;
   }
 
   .product {
-    width: 30%;
+    width: 31%;
   }
 }
 body {
