--- a/staff/alex-martinez/templates/instagram/style.css
+++ b/staff/alex-martinez/templates/instagram/style.css
@@ -102,7 +102,7 @@ header{
 
 @media only screen and (min-width: 768px){
     .search{
-        display: inline;
+        display: inline-block;
         width: 30%;
     }
     .search>p{
