--- a/staff/lisandro-bertoli/templates/nike/style.sass
+++ b/staff/lisandro-bertoli/templates/nike/style.sass
@@ -3,7 +3,7 @@
 @import ./components/header
 @import ./components/results
 @import ./components/footer
-@import media-queries
-
+@import media-queries-results
+@import media-queries-header
 body
     font-family: Arial
