--- a/staff/lisandro-bertoli/templates/nike/components/header.sass
+++ b/staff/lisandro-bertoli/templates/nike/components/header.sass
@@ -1,4 +1,4 @@
-.main-header
+.header
     display: flex
     justify-content: space-between
     width: 100%
@@ -6,11 +6,14 @@
     padding: 1rem
     border-bottom: 0.3px solid lightgrey
 
-    &__actions
+    &__actions .fas, &__logo
+        font-size: 2rem
+
+    .header-actions
         display: flex
         justify-content: space-around
         width: 12rem
         padding: 0.4rem
 
-    &__actions .fas, &__logo
-        font-size: 2rem
+        &__query--show
+            display: none
