added instagram template demo: 100%

--- a/staff/bamidele-aighewi/templates/instagram/profile-post.html
+++ b/staff/bamidele-aighewi/templates/instagram/profile-post.html
@@ -25,9 +25,7 @@
     <main class="profilePostPage page__body">
         <div class="content">
             <div class="postPreview">
-                <div class="postPreview__media">
-
-                </div>
+                <div class="postPreview__media"></div>
                 <div class="postPreview__details">
                     <header class="postPreview__header card__header">
                         <section class="card__stories stories">
