--- a/staff/marc-salas/nike/media.sass
+++ b/staff/marc-salas/nike/media.sass
@@ -1,13 +1,32 @@
 @media only screen and ( min-width: 1024px )
+    .head__extra, .head__menu-big
+        display: flex       
+    .head__menu-small
+        display: none
+    .head__logo-nike
+        margin-top: 13px
+    .head__footer
+        display: flex
     .product       
         width: 30%
     .results
         display: grid
         grid-template-columns: repeat( 5, auto)
         &__header
-            grid-column: 1 / span 2
+            grid-column: 1 / span 5
         &__filter
-            grid-column:  1/ span 1
+            grid-column: 1/ span 1
         &__products
             grid-column: 2/ span 4
         
+@media only screen and ( max-width: 1024px )
+    .head__extra, .head__menu-big
+        display: none
+    .head__menu-small
+        display: flex
+    .head__logo-nike
+        margin-top: 0
+    .head__footer
+        display: none
+    .results__filter
+        display: none
