--- a/staff/marc-salas/nike/style.css
+++ b/staff/marc-salas/nike/style.css
@@ -41,17 +41,74 @@ select,
 
 .head {
   display: flex;
-  justify-content: space-between;
-  padding: 20px;
+  flex-wrap: wrap;
   border-bottom: 0.2px solid grey;
 }
-.head__menu {
+.head__body {
+  display: flex;
+  width: 100vw;
+  justify-content: space-between;
+}
+.head__logo-nike {
+  padding: 20px;
+}
+.head__menu-small {
+  padding: 20px;
   width: 10rem;
   display: flex;
   justify-content: space-between;
 }
 .head__menu-nav {
   display: inline-flex;
+}
+.head__extra {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid grey;
+  width: 100vw;
+  height: 6vh;
+}
+.head__extra-corporative > ul, .head__extra-user > ul {
+  display: flex;
+  height: 100%;
+}
+.head__extra-corporative > ul > li, .head__extra-user > ul > li {
+  font-size: 1.5rem;
+  padding: 8px 28px;
+}
+.head__extra-corporative > ul > li {
+  border: 1px solid black;
+}
+.head__menu-big > ul {
+  display: flex;
+  margin: 25px 20px;
+  margin-top: 33px;
+}
+.head__menu-big > ul > li {
+  font-size: 2rem;
+  margin-right: 20px;
+}
+.head__menu-big > ul > li > input {
+  height: 30px;
+  width: 200px;
+}
+.head__footer {
+  border: 1px solid black;
+  width: 100vw;
+  height: 8vh;
+}
+.head__footer-content {
+  width: 75%;
+  display: flex;
+  justify-content: space-around;
+  margin-left: 12.5%;
+}
+.head__footer-content-promotion {
+  font-size: 2rem;
+  margin-top: 2vh;
+}
+.head__footer-content-arrow-left, .head__footer-content-arrow-right {
+  margin-top: 10px;
 }
 
 .fas {
@@ -68,6 +125,9 @@ select,
 }
 .results__header-filter {
   margin: 10px;
+}
+.results__header-title {
+  margin-left: 25px;
 }
 
 .product {
@@ -95,6 +155,31 @@ select,
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+}
+
+.filter__list {
+  border-top: 1px solid grey;
+  margin-left: 40px;
+  margin-right: 20px;
+}
+.filter__list-title {
+  margin-top: 10px;
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+}
+.filter__list-title > p, .filter__list-title > button {
+  font-size: 2rem;
+}
+.filter__list-options {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+}
+.filter__list-options > il {
+  margin-bottom: 6px;
+  font-size: 2rem;
+  width: 100%;
 }
 
 .fas {
@@ -146,6 +231,22 @@ select,
 }
 
 @media only screen and (min-width: 1024px) {
+  .head__extra, .head__menu-big {
+    display: flex;
+  }
+
+  .head__menu-small {
+    display: none;
+  }
+
+  .head__logo-nike {
+    margin-top: 13px;
+  }
+
+  .head__footer {
+    display: flex;
+  }
+
   .product {
     width: 30%;
   }
@@ -155,13 +256,34 @@ select,
     grid-template-columns: repeat(5, auto);
   }
   .results__header {
-    grid-column: 1/span 2;
+    grid-column: 1/span 5;
   }
   .results__filter {
     grid-column: 1/span 1;
   }
   .results__products {
     grid-column: 2/span 4;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .head__extra, .head__menu-big {
+    display: none;
+  }
+
+  .head__menu-small {
+    display: flex;
+  }
+
+  .head__logo-nike {
+    margin-top: 0;
+  }
+
+  .head__footer {
+    display: none;
+  }
+
+  .results__filter {
+    display: none;
   }
 }
 
