finished media queries for header

--- a/staff/lisandro-bertoli/templates/nike/config.sass
+++ b/staff/lisandro-bertoli/templates/nike/config.sass
@@ -5,9 +5,10 @@
     list-style: none
 
 html, body
-    width: 100vw
+    width: 99vw
     height: 100vh
     font-size: 10px
+    box-sizing: border-box
 
 button,
 input,
