--- a/staff/lisandro-bertoli/templates/nike/media-queries-results.sass
+++ b/staff/lisandro-bertoli/templates/nike/media-queries-results.sass
@@ -9,6 +9,11 @@
             grid-column: 1 / span 4
             padding: 0.6rem 4.8rem 0.1rem 4.8rem
 
+        &__filter-actions
+            display: flex
+            & > nav
+                display: flex
+
         &__filters-menu
             grid-column: 1 / span 1
             width: 20rem
