--- a/staff/lisandro-bertoli/templates/nike/components/header.sass
+++ b/staff/lisandro-bertoli/templates/nike/components/header.sass
@@ -1,10 +1,18 @@
 .header
+
     display: flex
     justify-content: space-between
     width: 100%
     height: 4.5rem
-    padding: 1rem
     border-bottom: 0.3px solid lightgrey
+
+    &__logo
+        width: 10rem
+        margin: 0 1rem
+        & > img
+            margin: 0 2rem
+            height: 4.8rem
+            width: 5rem
 
     &__actions .fas, &__logo
         font-size: 2rem
@@ -13,7 +21,9 @@
         display: flex
         justify-content: space-around
         width: 12rem
-        padding: 0.4rem
 
         &__query--show
             display: none
+
+.header-alt-nav
+    display: none
