--- a/staff/lisandro-bertoli/templates/nike/media-queries-header.sass
+++ b/staff/lisandro-bertoli/templates/nike/media-queries-header.sass
@@ -1,13 +1,42 @@
 @media only screen and (min-width: 1024px)
+    body
+        width: 99vw
+
+    .header-alt-nav
+        display: flex
+        justify-content: space-between
+        border-bottom: 0.5px solid lightgrey
+
+        height: 4rem
+        &__brands, &__actions
+            display: flex
+            width: 30%
+            justify-content: space-around
+            & > figure
+                border-right: 0.25px solid lightgrey
+                width: 25%
+                text-align: center
+                padding-top: 1.5rem
+            & > a
+                padding-top: 1.5rem
+                text-decoration: none
+                color: grey
+
     .header
         height: 6rem
+        margin-top: 1rem
+        width: 99vw
+
         .header-actions
             justify-content: space-between
             width: 70%
             &__query--show
                 display: inline-block
                 order: 1
-                margin-right: 2rem
+                margin-top: 1rem
+                height: 60%
+                margin-right: 2.5rem
+                width: 15%
             &__query-btn--hidden
                 display: none
             &__cart--hidden
