--- a/staff/lisandro-bertoli/templates/nike/style.css
+++ b/staff/lisandro-bertoli/templates/nike/style.css
@@ -6,9 +6,10 @@
 }
 
 html, body {
-  width: 100vw;
+  width: 99vw;
   height: 100vh;
   font-size: 10px;
+  box-sizing: border-box;
 }
 
 button,
@@ -38,8 +39,16 @@ select,
   justify-content: space-between;
   width: 100%;
   height: 4.5rem;
-  padding: 1rem;
   border-bottom: 0.3px solid lightgrey;
+}
+.header__logo {
+  width: 10rem;
+  margin: 0 1rem;
+}
+.header__logo > img {
+  margin: 0 2rem;
+  height: 4.8rem;
+  width: 5rem;
 }
 .header__actions .fas, .header__logo {
   font-size: 2rem;
@@ -48,9 +57,12 @@ select,
   display: flex;
   justify-content: space-around;
   width: 12rem;
-  padding: 0.4rem;
 }
 .header .header-actions__query--show {
+  display: none;
+}
+
+.header-alt-nav {
   display: none;
 }
 
@@ -173,6 +185,12 @@ select,
     grid-column: 1/span 4;
     padding: 0.6rem 4.8rem 0.1rem 4.8rem;
   }
+  .main-results__filter-actions {
+    display: flex;
+  }
+  .main-results__filter-actions > nav {
+    display: flex;
+  }
   .main-results__filters-menu {
     grid-column: 1/span 1;
     width: 20rem;
@@ -214,8 +232,37 @@ select,
   }
 }
 @media only screen and (min-width: 1024px) {
+  body {
+    width: 99vw;
+  }
+
+  .header-alt-nav {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 0.5px solid lightgrey;
+    height: 4rem;
+  }
+  .header-alt-nav__brands, .header-alt-nav__actions {
+    display: flex;
+    width: 30%;
+    justify-content: space-around;
+  }
+  .header-alt-nav__brands > figure, .header-alt-nav__actions > figure {
+    border-right: 0.25px solid lightgrey;
+    width: 25%;
+    text-align: center;
+    padding-top: 1.5rem;
+  }
+  .header-alt-nav__brands > a, .header-alt-nav__actions > a {
+    padding-top: 1.5rem;
+    text-decoration: none;
+    color: grey;
+  }
+
   .header {
     height: 6rem;
+    margin-top: 1rem;
+    width: 99vw;
   }
   .header .header-actions {
     justify-content: space-between;
@@ -224,7 +271,10 @@ select,
   .header .header-actions__query--show {
     display: inline-block;
     order: 1;
-    margin-right: 2rem;
+    margin-top: 1rem;
+    height: 60%;
+    margin-right: 2.5rem;
+    width: 15%;
   }
   .header .header-actions__query-btn--hidden {
     display: none;
