end of page results

--- a/staff/marc-salas/nike/head.sass
+++ b/staff/marc-salas/nike/head.sass
@@ -19,7 +19,7 @@
     &__extra
         display: flex
         justify-content: space-between
-        border: 1px solid grey
+        border-bottom: 1px solid grey
         width: 100vw
         height: 6vh
         &-corporative > ul, &-user > ul
@@ -29,8 +29,9 @@
             font-size: 1.5rem
             padding: 8px 28px  
         &-corporative > ul > li
-
-            border: 1px solid black
+            border-right: 1px solid grey
+    &__menu-big
+        margin-right: 20vw
     &__menu-big > ul
         display: flex
         margin: 25px 20px
@@ -42,7 +43,8 @@
                 height: 30px
                 width: 200px
     &__footer
-        border: 1px solid black
+        border-top: 1px solid grey
+        border-bottom: 1px solid grey        
         width: 100vw
         height: 8vh
     &__footer-content
