add results page currernt version

--- a/staff/lisandro-bertoli/templates/nike/config.sass
+++ b/staff/lisandro-bertoli/templates/nike/config.sass
@@ -1,3 +1,4 @@
+
 *
     margin: 0
     padding: 0
@@ -5,7 +6,7 @@
     list-style: none
 
 html, body
-    width: 99vw
+    width: 100vw
     height: 100vh
     font-size: 10px
     box-sizing: border-box
@@ -29,3 +30,8 @@ select,
     text-decoration: none
     text-align: center
     background-color: transparent
+
+@media only screen and (min-width: 1024px)
+    body
+        font-size: 1.6rem
+        line-height: 2
