--- a/staff/lisandro-bertoli/templates/nike/components/header.sass
+++ b/staff/lisandro-bertoli/templates/nike/components/header.sass
@@ -14,16 +14,17 @@
             height: 4.8rem
             width: 5rem
 
-    &__actions .fas, &__logo
-        font-size: 2rem
-
     .header-actions
         display: flex
         justify-content: space-around
         width: 12rem
 
-        &__query--show
+        &__query, &__nav
             display: none
+        &__nav-button
+            padding-top: 1.3rem
+        &__query-btn, &__cart, &__nav-button
+            font-size: 1.5rem
 
 .header-alt-nav
     display: none
