--- a/staff/lisandro-bertoli/templates/nike/components/product.sass
+++ b/staff/lisandro-bertoli/templates/nike/components/product.sass
@@ -3,22 +3,20 @@
     width: 49.5%
     display: flex
     flex-direction: column
-    font-stretch: 100%
     &__img-container > img
         margin-bottom: 1rem
         width: 100%
 
     &__title
         line-height: 1.8rem
-        font-size: 1rem
+        font-size: 1.1rem
+        padding-left: 0.5rem
     &__info
         color: grey
         line-height: 1.5rem
-        font-size: 1rem
+        font-size: 1.1rem
+        padding-left: 0.5rem
     &__price
         line-height: 1.8rem
-        font-size: 1rem
-
-@media only screen and (min-width: 1024px)
-    .product
-        width: 30%
+        font-size: 1.1rem
+        padding-left: 0.5rem
