--- a/staff/lisandro-bertoli/templates/nike/components/results.sass
+++ b/staff/lisandro-bertoli/templates/nike/components/results.sass
@@ -18,11 +18,15 @@
     &__title > h1
         font-size: 2rem
 
+    &__filter-actions > nav
+        display: none
+
     &__filter-toggle  .fas
         font-size: 1.5rem
         margin-top: 1.5rem
 
     &__filters-menu
+        display: none
         width: 100%
 
     &__products
