--- a/staff/lisandro-bertoli/templates/nike/media-queries-header.sass
+++ b/staff/lisandro-bertoli/templates/nike/media-queries-header.sass
@@ -1,5 +1,5 @@
 @media only screen and (min-width: 1024px)
-    body
+    body, html
         width: 99vw
 
     .header-alt-nav
@@ -7,7 +7,7 @@
         justify-content: space-between
         border-bottom: 0.5px solid lightgrey
 
-        height: 4rem
+        height: 5rem
         &__brands, &__actions
             display: flex
             width: 30%
@@ -16,9 +16,9 @@
                 border-right: 0.25px solid lightgrey
                 width: 25%
                 text-align: center
-                padding-top: 1.5rem
+                padding-top: 1rem
             & > a
-                padding-top: 1.5rem
+                padding-top: 1rem
                 text-decoration: none
                 color: grey
 
@@ -30,18 +30,19 @@
         .header-actions
             justify-content: space-between
             width: 70%
-            &__query--show
+            &__query
                 display: inline-block
                 order: 1
                 margin-top: 1rem
                 height: 60%
                 margin-right: 2.5rem
                 width: 15%
-            &__query-btn--hidden
+                min-width: 6rem
+            &__query-btn
                 display: none
-            &__cart--hidden
+            &__cart
                 display: none
-            &__nav-button--hidden
+            &__nav-button
                 display: none
             &__nav-container
                 order: 0
@@ -49,5 +50,9 @@
             &__nav
                 display: flex
                 justify-content: space-around
-                width: 75%
+                width: 70%
                 padding: 2.4rem 1.5rem
+                font-weight: 600
+
+                & > li
+                    margin: 0 1rem
