--- a/staff/lisandro-bertoli/templates/nike/media-queries-results.sass
+++ b/staff/lisandro-bertoli/templates/nike/media-queries-results.sass
@@ -11,10 +11,18 @@
 
         &__filter-actions
             display: flex
+
             & > nav
                 display: flex
+                padding: 1rem
+
+                & > .fas
+                    padding-top: 2.1rem
+                & > p
+                    padding: 1.5rem 1rem 0 0
 
         &__filters-menu
+            display: block
             grid-column: 1 / span 1
             width: 20rem
             padding: 0 0 0 4.8rem
@@ -28,7 +36,6 @@
                     justify-content: space-between
                 &__options
                     padding-bottom: 2rem
-                    line-height: 1.5rem
 
                 &__color > .filter__options
                     display: flex
@@ -49,3 +56,5 @@
 
     .product
         width: 31%
+        &__title, &__info, &__price
+            font-size: 1.4rem
