--- a/staff/lisandro-bertoli/templates/nike/results.html
+++ b/staff/lisandro-bertoli/templates/nike/results.html
@@ -37,16 +37,16 @@
 				</figure>
 				<section class="header-actions">
 					<input
-						class="header-actions__query header-actions__query--show"
+						class="header-actions__query"
 						type="text"
 					/>
-					<button class="header-actions__query-btn header-actions__query-btn--hidden"><i class="fas fa-search"></i></button>
-					<button class="header-actions__cart header-actions__cart--hidden">
+					<button class="header-actions__query-btn"><i class="fas fa-search"></i></button>
+					<button class="header-actions__cart">
 						<i class="fas fa-shopping-cart"></i>
 					</button>
 					<nav class="header-actions__nav-container">
-						<button class="header-actions__nav-button header-actions__nav-button--hidden"><i class="fas fa-bars"></i></button>
-						<ul class="header-actions__nav header-actions__nav--hidden">
+						<button class="header-actions__nav-button"><i class="fas fa-bars"></i></button>
+						<ul class="header-actions__nav">
 							<li>NOVEDADES</li>
 							<li>HOMBRE</li>
 							<li>MUJER</li>
@@ -78,7 +78,7 @@
 			>
 				<nav class="filter filter__regular">
 					<header class="filter__header">
-						<h4>Tipo de Producto</h4>
+						<h4>Lifestyle</h4>
 						<i class="fas fa-chevron-up"></i>
 					</header>
 					<ul class="filter__options">
@@ -131,7 +131,7 @@
 			<section class="main-results__products">
 				<article class="product">
 					<figure class="product__img-container">
-						<img src="https://dummyimage.com/349x349/d4d4d4/fff" alt="" />
+						<img src="https://c.static-nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/rh7wife1gyxtjlwddrlr/vapor-street-peg-zapatillas-3QKsvh.jpg" alt="" />
 						<figcaption>
 							<h5 class="product__title">Nike Air Max 90</h5>
 							<p class="product__info">Zapatillas - mujer</p>
@@ -142,7 +142,7 @@
 				</article>
 				<article class="product">
 					<figure class="product__img-container">
-						<img src="https://dummyimage.com/349x349/d4d4d4/fff" alt="" />
+						<img src="https://c.static-nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/rh7wife1gyxtjlwddrlr/vapor-street-peg-zapatillas-3QKsvh.jpg" alt="" />
 						<figcaption>
 							<h5 class="product__title">Nike Air Max 90</h5>
 							<p class="product__info">Zapatillas - mujer</p>
@@ -153,7 +153,7 @@
 				</article>
 				<article class="product">
 					<figure class="product__img-container">
-						<img src="https://dummyimage.com/349x349/d4d4d4/fff" alt="" />
+						<img src="https://c.static-nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/rh7wife1gyxtjlwddrlr/vapor-street-peg-zapatillas-3QKsvh.jpg" alt="" />
 						<figcaption>
 							<h5 class="product__title">Nike Air Max 90</h5>
 							<p class="product__info">Zapatillas - mujer</p>
@@ -164,7 +164,7 @@
 				</article>
 				<article class="product">
 					<figure class="product__img-container">
-						<img src="https://dummyimage.com/349x349/d4d4d4/fff" alt="" />
+						<img src="https://c.static-nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/rh7wife1gyxtjlwddrlr/vapor-street-peg-zapatillas-3QKsvh.jpg" alt="" />
 						<figcaption>
 							<h5 class="product__title">Nike Air Max 90</h5>
 							<p class="product__info">Zapatillas - mujer</p>
@@ -175,7 +175,7 @@
 				</article>
 				<article class="product">
 					<figure class="product__img-container">
-						<img src="https://dummyimage.com/185x185/cccccc/fff" alt="" />
+						<img src="https://c.static-nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/rh7wife1gyxtjlwddrlr/vapor-street-peg-zapatillas-3QKsvh.jpg" alt="" />
 						<figcaption>
 							<h5 class="product__title">Nike Air Max 90</h5>
 							<p class="product__info">Zapatillas - mujer</p>
@@ -186,7 +186,7 @@
 				</article>
 				<article class="product">
 					<figure class="product__img-container">
-						<img src="https://dummyimage.com/185x185/cccccc/fff" alt="" />
+						<img src="https://c.static-nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/rh7wife1gyxtjlwddrlr/vapor-street-peg-zapatillas-3QKsvh.jpg" alt="" />
 						<figcaption>
 							<h5 class="product__title">Nike Air Max 90</h5>
 							<p class="product__info">Zapatillas - mujer</p>
@@ -197,7 +197,7 @@
 				</article>
 				<article class="product">
 					<figure class="product__img-container">
-						<img src="https://dummyimage.com/349x349/d4d4d4/fff" alt="" />
+						<img src="https://c.static-nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/rh7wife1gyxtjlwddrlr/vapor-street-peg-zapatillas-3QKsvh.jpg" alt="" />
 						<figcaption>
 							<h5 class="product__title">Nike Air Max 90</h5>
 							<p class="product__info">Zapatillas - mujer</p>
@@ -208,7 +208,7 @@
 				</article>
 				<article class="product">
 					<figure class="product__img-container">
-						<img src="https://dummyimage.com/349x349/d4d4d4/fff" alt="" />
+						<img src="https://c.static-nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/rh7wife1gyxtjlwddrlr/vapor-street-peg-zapatillas-3QKsvh.jpg" alt="" />
 						<figcaption>
 							<h5 class="product__title">Nike Air Max 90</h5>
 							<p class="product__info">Zapatillas - mujer</p>
@@ -219,7 +219,7 @@
 				</article>
 				<article class="product">
 					<figure class="product__img-container">
-						<img src="https://dummyimage.com/349x349/d4d4d4/fff" alt="" />
+						<img src="https://c.static-nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/rh7wife1gyxtjlwddrlr/vapor-street-peg-zapatillas-3QKsvh.jpg" alt="" />
 						<figcaption>
 							<h5 class="product__title">Nike Air Max 90</h5>
 							<p class="product__info">Zapatillas - mujer</p>
@@ -232,7 +232,7 @@
 		</main>
 		<footer class="footer">
 			<section class="footer__site-map">
-				<nav class="site-map site-map__suggestions-menu">
+				<nav class="site-map__suggestions-menu">
 					<ul>
 						<li>TARJETAS DE REGALO</li>
 						<li>TIENDAS MAS CERCANAS</li>
@@ -242,23 +242,23 @@
 						<li>COMENTARIOS SOBRE LA WEB</li>
 					</ul>
 				</nav>
-				<nav class="site-map site-map__help-menu">
+				<nav class="site-map__help-menu">
 					<h5>OBTENER AYUDA</h5>
 					<ul>
-						<li></li>
-						<li></li>
-						<li></li>
-						<li></li>
-						<li></li>
+						<li>Estado del pedido</li>
+						<li>Envío y entrega</li>
+						<li>Devoluciones</li>
+						<li>Opciones de pago</li>
+						<li>Contactar con nosotros</li>
 					</ul>
 				</nav>
-				<nav class="site-map site-map__about-menu">
+				<nav class="site-map__about-menu">
 					<h5>ACERCA DE NIKE</h5>
 					<ul>
-						<li></li>
-						<li></li>
-						<li></li>
-						<li></li>
+						<li>Noticias</li>
+						<li>Empleo</li>
+						<li>Inversores</li>
+						<li>Sostenibilidad</li>
 					</ul>
 				</nav>
 				<section class="footer__social-media">
@@ -272,7 +272,7 @@
 					</nav>
 				</section>
 			</section>
-			<section footer="footer__sub-footer">
+			<section class="footer__sub-footer">
 				<small
 					><i class="fas fa-map-marker-alt"></i
 					><span class="footer__country">Espana</span>
