--- a/staff/lisandro-bertoli/templates/nike/style.sass
+++ b/staff/lisandro-bertoli/templates/nike/style.sass
@@ -5,5 +5,6 @@
 @import ./components/footer
 @import media-queries-results
 @import media-queries-header
+@import media-queries-footer
 body
     font-family: Arial
