add nike results all devices adaptive

--- a/staff/dario-fernandez/templates/nike/footer/deploy-menu.sass
+++ b/staff/dario-fernandez/templates/nike/footer/deploy-menu.sass
@@ -6,13 +6,16 @@
         justify-content: space-between
     &__list
         @extend %reset-list
-        @extend %small-text
+        color: #888
         display: none
         align-self: flex-end
+    &__link
+        margin-top: 1.2rem
 
-@media screen and ( min-width: 1024px )
+
+@media screen and ( min-width: 600px )
     .deploy-menu
         &__show-more-icon
-            display: none
+            display: none !important // Cambiar este !important por una solución que especifique más en la cascada
         &__list
             display: initial
