--- a/staff/dario-fernandez/templates/nike/filter/filter.sass
+++ b/staff/dario-fernandez/templates/nike/filter/filter.sass
@@ -3,8 +3,13 @@
     &__title
         color: #111
         font-weight: normal
+        display: flex
+        justify-content: space-between
     &__list
         list-style: none
-        padding: .3rem
+        padding: .5rem
+        border-bottom: 2px solid #747474
+        padding-bottom: 1.5rem
     &__feature
         color: #555
+        margin-bottom: .5rem
