--- a/staff/dario-fernandez/templates/nike/footer/footer.sass
+++ b/staff/dario-fernandez/templates/nike/footer/footer.sass
@@ -4,7 +4,7 @@
 .footer
     color: #FFF
     background-color: #101010
-    padding: 2rem 1rem 0 1rem
+    padding: 0 2rem
     display: flex
     flex-direction: column
     font-size: .7rem
@@ -12,19 +12,17 @@
         margin: 1rem 0
     &>i
         color: #FFF
+    &__menus-container
+        display: flex
+        flex-direction: column
     &__menu
-        margin: 0
+        margin: 0 0 0 0
+        border-bottom: 1px solid #888
     &__menu-list
         @extend %reset-list
         @extend %main-link
     &__link
-        margin: 1.2rem 0
-    &__split
-        height: 1px
-        background-color: #888
-        margin: 0
-    &__support-about
-        margin-bottom: 0
+        margin-bottom: 1.2rem
     &__deploy-menu
         margin: 0 0 2.5rem 0
     &__social-list
@@ -47,3 +45,47 @@
     &__legal-link
         @extend %small-text
         margin-bottom: 1.2rem
+@media screen and ( min-width: 600px )
+    .footer
+        &__main-section
+            margin-top: 2.3rem
+            display: flex
+            justify-content: space-between
+            border-bottom: 1px solid #888
+
+        &__menus-container
+            max-width: 65%
+            display: flex
+            justify-content: space-between
+            flex-direction: row
+            &>*
+                padding: 0 2rem
+        &__menu
+            padding-left: 0
+            border: 0
+        &__social-link
+            margin-right: 0
+            margin-left: 1.5rem
+        &__footer
+            display: flex
+            justify-content: space-between
+            align-items: flex-end
+        &__legal-info
+            align-self: flex-end
+            display: flex
+            align-items: flex-end
+        &__ubication
+            display: flex
+            align-items: flex-end
+            margin-right: 1rem
+            margin-bottom: 0
+        &__ubication-icon
+            margin-right: .3rem
+        &__legal-menu
+            max-width: 50%
+        &__legal-list
+            display: flex
+            justify-content: flex-end
+            flex-wrap: wrap
+        &__legal-link
+            margin: 1rem 1rem 0 0
