--- a/staff/dario-fernandez/templates/nike/search/search.sass
+++ b/staff/dario-fernandez/templates/nike/search/search.sass
@@ -1,3 +1,4 @@
+@import ../footer/utils
 *
     margin: 0
 .search
@@ -16,6 +17,7 @@
         &:focus
             outline: none
     &__submit
+        @extend %reset-button
         padding: 0
     &__submit-icon
         font-size: 1.3rem
@@ -24,4 +26,11 @@
         &__query
             margin-right: 0
             margin-left: 1rem
-    
+@media screen and ( min-width: 1024px )
+    .search
+        border: 1px solid #888
+        padding: .5rem 1rem
+        &__query
+            border: 0
+            margin: 0 .7rem
+            
