--- a/staff/marc-salas/nike/results-header.sass
+++ b/staff/marc-salas/nike/results-header.sass
@@ -5,6 +5,9 @@
     justify-content: space-between
     margin-top: 25px
     padding: 15px
+    position: sticky
+    top: 0
+    background-color: white
     &-filter
         margin: 10px
     &-title
