add modified nike project

--- a/staff/federico-lacabaratz/templates/nike/style.css
+++ b/staff/federico-lacabaratz/templates/nike/style.css
@@ -39,11 +39,6 @@
   font-size: 1.5em;
 }
 
-main {
-  max-width: 768px;
-  margin: 0 auto;
-}
-
 .header__container1 {
   position: fixed;
   height: 50px;
@@ -187,6 +182,13 @@ main {
 }
 .footer__disclaimer__link {
   width: 100%;
+}
+
+@media screen only and (min-width: 768px) {
+  main {
+    max-width: 768px;
+    margin: 0 auto;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
