--- a/staff/federico-lacabaratz/templates/nike/style.sass
+++ b/staff/federico-lacabaratz/templates/nike/style.sass
@@ -1,9 +1,5 @@
 @import config
 
-main
-    max-width: 768px
-    margin: 0 auto
-
 .header__container1
     position: fixed
     height: 50px
@@ -150,3 +146,7 @@ main
         width: 100%
 
 
+@media screen only and (min-width: 768px)
+    main
+        max-width: 768px
+        margin: 0 auto
